k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sentiment-service
  namespace: mlops-sentiment
  labels:
    app: sentiment-service
    version: v1
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: sentiment-service
    version: v1
---
apiVersion: v1
kind: Service
metadata:
  name: sentiment-service-nodeport
  namespace: mlops-sentiment
  labels:
    app: sentiment-service
    version: v1
    service-type: nodeport
spec:
  type: NodePort
  ports:
    - port: 8000
      targetPort: http
      protocol: TCP
      name: http
      nodePort: 30800
  selector:
    app: sentiment-service
    version: v1
